# CardiacPerfusion

./: .gitignore  CMakeLists.txt  KardioPerfusion.h  MyTestInteractorStyle.cxx  README.md  SimpleView.cxx  SimpleView.ui  doxyfile.in
Icons/: icons.qrc
analyse/: TacDialog.ui  gammaVariate.cpp  gammaVariate.h  gammafitdata.cpp  gammafitdata.h  linearregression.h  linearregressiondata.cpp  linearregressiondata.h  maxSlopeAnalyzer.cxx  maxSlopeAnalyzer.h  mmid4Analyzer.cxx  mmid4Analyzer.h  patlakdata.cpp  patlakdata.h  perfusionAnalyzer.cxx  perfusionAnalyzer.h  segmentinfo.cpp  segmentinfo.h  segmentlistmodel.cpp  segmentlistmodel.h  tacdialog.cpp  tacdialog.h  timedensitydata.cpp  timedensitydata.h  timedensitydatapicker.cpp  timedensitydatapicker.h
imagetree/: binaryimagetreeitem.cpp  binaryimagetreeitem.h  ctimagetreeitem.cpp  ctimagetreeitem.h  ctimagetreemodel.cpp  ctimagetreemodel.h  dicomtagtype.cpp  dicomtagtype.h  itkvtktreeitem.cpp  itkvtktreeitem.h  realimagetreeitem.cxx  realimagetreeitem.h  segmentationvalues.cpp  segmentationvalues.h  treeitem.cpp  treeitem.h  vtkconnectordatabase.cpp  vtkconnectordatabase.h
itkfilter/: autoAlignHeart.cxx  autoAlignHeart.h  itkBinShrinkImageFilter.h  itkBinShrinkImageFilter.hxx  itkFindLeftVentricle.h  itkFindLeftVentricle.txx  itkNaryMaximumSlopeImageFilter.h  itkNaryPerfusionImageFilter.h  itkShrinkAverageFilter.h  itkShrinkAverageFilter.txx  itkperfusionmapfilter.h  itkperfusionmapfilter.txx
main/: DicomSelectDialog.ui  KardioPerfusion.cxx  KardioPerfusion.h  KardioPerfusion.ui  MyTestInteractorStyle.cxx  MyTestInteractorStyle.h  dicomselectordialog.cpp  dicomselectordialog.h  main.cxx  perfusionMapCreator.cxx  perfusionMapCreator.h
misc/: imagedefinitions.h  signalslib.hpp
qtwidgets/: mytabwidget.cxx  mytabwidget.h  segmentselectbutton.cpp  segmentselectbutton.h
serialization/: ctimagetreemodel_serializer.cpp  ctimagetreemodel_serializer.h  serialization_helper.h
vtkwidgets/: multiplanarreformatwidget.cpp  multiplanarreformatwidget.h  vtkbinaryimageoverlay.cpp  vtkbinaryimageoverlay.h  vtkbinaryimagetocolor.cpp  vtkbinaryimagetocolor.h  vtkcoloredimageoverlay.cxx  vtkcoloredimageoverlay.h  vtkinteractoractiondispatch.h  vtkinteractorstyleprojectionview.cpp  vtkinteractorstyleprojectionview.h
